hphp/test/slow/hash_comment.php.expectf
Fatal error: This character is invalid. in %s/test/slow/hash_comment.php on line 4
